--- a/Microsoft-clone/style.css
+++ b/Microsoft-clone/style.css
@@ -1,99 +1,39 @@
-body{
-  margin: 0;
-  width: 100%;
+
+.container-fluid {
+  padding-right: 0;
+  padding-left: 0;
 }
 .navbar-brand img{
   width: 120px;
   height: 50px;
   object-fit: contain;
 }
-.container-1{
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-}
-.list{
-    list-style: none;
-    display: flex;
-    position: absolute;
-    left: 15%;
-    top: 25px;
-}
-.header{
-  width: 100vw;
-}
-.list li{
-  margin-right: 20px;
-    font-size: 13px;
-    cursor: pointer;
-}
-.list li:hover{
+
+.navbar li:hover{
   border-bottom: 2px solid black;
 }
-.navbar{
-  margin-left: 10px;
-  margin-right: 20px;
-  display: flex;
-}
-.navbar-brand{
-  position: relative;
-  left: 40px;
-  top: -5px;
-}
-.container-2 a{
+
+
+.Login a{
   text-decoration: none;
   color: black;
   cursor: pointer;
 }
-.container-2 a:hover{
+.Login a:hover{
   border-bottom: 2px solid black;
 }
-.container-2{
-    width: 50%;
-    display: flex;
-    align-items: center;
-    position: relative;
-    left: 35%;
-    margin-bottom: 10px;
-}
-.container-2 .child{
-  margin-right: 10px;
-}
-.hamburger{
-    display: none;
-}
-.Menu{
-  visibility: hidden;
-}
-.menu{
-  position: absolute;
+.Login{
+  margin-left: auto;
   display: flex;
-  width: 50%;
-  flex-direction: row;
-  align-items: flex-start;
-  margin-left: 20px;
+  align-items: center;
+  padding-right: 15px; 
 }
-.menu img{
-  width: 60px;
-  height: 60px;
-  display: block;
-  padding: 20px;
+
+
+.Login .child {
+  margin-left: 10px;
 }
-.menu image {
-  margin: 0px 50px 0 20px;
-  display: flex;
-  flex-direction: column;
-}
-.menu-list ul{
-  list-style: none;
-} 
-.menu-list ul li{
-  line-height: 3.7;
-}
-.container img:hover{
-  transform: scale(1.2);
-}
+
 
 .carousel-caption{
   display: flex;
@@ -228,6 +168,10 @@ top: -9%;
 .text-box a{
   margin-left: 30px;
 }
+.carousel-caption .second{
+  position: absolute;
+  left: 100%;
+}
 @media (max-width: 992px) {
   .text-overlay {
     position: relative;
@@ -237,54 +181,38 @@ top: -9%;
     left: 0;
     background-color: rgba(255, 255, 255, 0.8);
   }
+  .carousel-inner img{
+    width: auto;
+    height: 400px;
+  }
+  .carousel-caption h5{
+    font-size: 30px;
+  }
 }
 
-
-
-@media screen and (max-width:698px){
-    .navbar-brand{
-        position: relative;
-        left: 40%;
-    }
-    .list{
-     display: none;
-    }
-    .container-2 span{
-
-
-        display: block;
-        position: absolute;
-        left: 50px;
-    }
-
-    .hamburger {
-        position: absolute;
-        left: 10px;
-        width: 20px;
-        height: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        cursor: pointer;
-        margin-right: 10px;
-      }
-      .hamburger div {
-        width: 100%;
-        height: 2px;
-        background-color: #333;
-        transition: all 0.3s ease;
-      }
-      .hamburger.active div:nth-child(2) {
-        opacity: 0;
-      }
-      .hamburger.active div:nth-child(1) {
-        transform: translateY(8px) rotate(45deg);
-      }
-      .hamburger.active div:nth-child(3) {
-        transform: translateY(-8px) rotate(-45deg);
-      }
-} 
-
+@media screen and (max-width: 768px) {
+  .container-1 {
+    flex-direction: column;
+    align-items: center;
+  }
+  .list {
+    display: none;
+  }
+  .container-2 {
+    width: 100%;
+    justify-content: space-between;
+  }
+}
+@media screen and (max-width:1200px){
+  .carousel-caption h5{
+    font-size: 20px;
+  }
+}
+@media screen and (max-width:1400px){
+  .carousel-caption h5{
+    font-size: 30px;
+  }
+}
 
 
 
