--- a/Microsoft-clone/style.css
+++ b/Microsoft-clone/style.css
@@ -1,4 +1,4 @@
-
+/* Navbar */
 .container-fluid {
   padding-right: 0;
   padding-left: 0;
@@ -34,6 +34,7 @@
   margin-left: 10px;
 }
 
+/* Main-content */
 
 .carousel-caption{
   display: flex;
@@ -53,6 +54,10 @@
 .carousel-inner{
 width: 100%;
 max-height: 100%;
+}
+.carousel-caption .second{
+  position: absolute;
+  left: 100%;
 }
 .slide-show{
   max-width: 100%;
@@ -93,10 +98,16 @@ max-height: 100%;
 .logo .row{
   margin-left: 50px;
 }
+
+/* Card-section */
+
 .Card {
   margin-bottom: 20px;
   margin-top: 40px;
 }
+
+/* social-section */
+
 .Social{
   width: 100%;
   margin: 100px 0 100px 0;
@@ -120,6 +131,8 @@ max-height: 100%;
 left: 61%;
 top: -9%;
 }
+/* footer-section */
+
 .footer-container{
   background-color: whitesmoke;
   height: 100%;
@@ -152,6 +165,7 @@ top: -9%;
   background-color: rgba(230, 226, 226, 0.8);
   padding: 20px;
 }
+/* center-image */
 
 .text-box {
   width: 100%; 
@@ -168,10 +182,9 @@ top: -9%;
 .text-box a{
   margin-left: 30px;
 }
-.carousel-caption .second{
-  position: absolute;
-  left: 100%;
-}
+
+
+
 @media (max-width: 992px) {
   .text-overlay {
     position: relative;
